# Dynamic-Linking-Benchmarks

./: README.md
01-code_size/: codesiz.sh  main.c  main2.c
02-mem_size/: addvec.c  main.c  main2.c  memsiz.sh  multvec.c  vector.h
03-performance/: addvec.c  main.c  main2.c  performance.sh
04-flexibility/: adddbl.c  addint.c  addstr.c  dlrun  flexibility.sh  main.c
05-communication/: CMakeLists.txt  a.c  b.c  c.c  communication.sh  d.c  ldout  main.c  main2.c  main3.c  modA.c  modB.c  rdout1  rdout2
06-Dlk_in_C++/: CMakeLists.txt  main.cpp  modA.cpp  modA.hpp  modB.cpp  modB.hpp  module.hpp
codegen/: addvec.c  codegen.sh  multvec.c
